@@ -1,5 +1,11 @@
 2005-09-23  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/ephy-python-loader.c: (impl_get_object):
+
+	Accept "Module" argument.
+
+2005-09-23  Christian Persch  <chpe@cvs.gnome.org>
+
 	* lib/ephy-shlib-loader.c: (impl_get_object)
 	(ephy_shlib_loader_class_init):
 
